# matnes

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Matmakefile
src/: apu.cpp  apu.h  assembler.cpp  assembler.h  bus.h  cpu.cpp  cpu.h  execution-times.h  ibus.h  instruction-lookup.h  instruction-mode.h  instructions-orig.h  instructions.h  loadnes.cpp  loadnes.h  main.cpp  ppu.cpp  ppu.h  ppuview.cpp  ppuview.h
test/: Matmakefile  assembler_test.cpp  cpu_register_test.cpp  instruction_test.cpp  rom_loader_test.cpp  staticmessage.h
